; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_hda_codec.c_snd_hda_bus_dev_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_hda_codec.c_snd_hda_bus_dev_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_device = type { %struct.hda_bus* }
%struct.hda_bus = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_device*)* @snd_hda_bus_dev_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_hda_bus_dev_free(%struct.snd_device* %0) #0 {
  %2 = alloca %struct.snd_device*, align 8
  %3 = alloca %struct.hda_bus*, align 8
  store %struct.snd_device* %0, %struct.snd_device** %2, align 8
  %4 = load %struct.snd_device*, %struct.snd_device** %2, align 8
  %5 = getelementptr inbounds %struct.snd_device, %struct.snd_device* %4, i32 0, i32 0
  %6 = load %struct.hda_bus*, %struct.hda_bus** %5, align 8
  store %struct.hda_bus* %6, %struct.hda_bus** %3, align 8
  %7 = load %struct.hda_bus*, %struct.hda_bus** %3, align 8
  %8 = getelementptr inbounds %struct.hda_bus, %struct.hda_bus* %7, i32 0, i32 0
  store i32 1, i32* %8, align 4
  %9 = load %struct.hda_bus*, %struct.hda_bus** %3, align 8
  %10 = call i32 @snd_hda_bus_free(%struct.hda_bus* %9)
  ret i32 %10
}

declare dso_local i32 @snd_hda_bus_free(%struct.hda_bus*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
